[package]
name = "ethereumconsensusindexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
num = "0.4.1"
num-bigint = "0.4.3"
rayon = "1.7.0"
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.102"
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = "1.28.2"
